// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Throw after bot selected hand renders correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-AxhUy cvuOTU"
  >
    <div
      class="sc-AxgMl jXNZVy"
    >
      <div
        class="sc-AxjAm bVDfZd"
      >
        <img
          alt="paper"
          class="sc-AxirZ dtQZHs"
          src="icon-paper.svg"
        />
      </div>
      <p
        class="sc-AxhCb irvhNx"
      >
        you picked
      </p>
    </div>
    <div
      class="sc-AxgMl jXNZVy"
    >
      <div
        class="sc-AxjAm fvgMhd"
      >
        <img
          alt="scissors"
          class="sc-AxirZ dtQZHs"
          src="icon-scissors.svg"
        />
      </div>
      <p
        class="sc-AxhCb irvhNx"
      >
        the house picked
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Throw before bot selected hand renders correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-AxhUy cvuOTU"
  >
    <div
      class="sc-AxgMl jXNZVy"
    >
      <div
        class="sc-AxjAm bVDfZd"
      >
        <img
          alt="paper"
          class="sc-AxirZ dtQZHs"
          src="icon-paper.svg"
        />
      </div>
      <p
        class="sc-AxhCb irvhNx"
      >
        you picked
      </p>
    </div>
    <div
      class="sc-AxgMl jXNZVy"
    >
      <div
        class="sc-AxiKw ivkKKW"
      />
      <p
        class="sc-AxhCb irvhNx"
      >
        the house picked
      </p>
    </div>
  </div>
</DocumentFragment>
`;
